# mlir-tutorial

./: .clangd  .gitignore  CMakeLists.txt  README.md
ex1-io/: ex1-io.cpp  ex1.mlir
ex2-build/: ex2-build.cpp
ex3-dialect/: CMakeLists.txt  ex3-cse.mlir  ex3.mlir
ex3-dialect/include/toy/: CMakeLists.txt  ToyDialect.td  ToyOps.h  ToyOps.td
ex3-dialect/lib/: toy.cpp
ex3-dialect/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex4-beautiful-dialect/: CMakeLists.txt  ex4.mlir
ex4-beautiful-dialect/include/toy/: CMakeLists.txt  ToyDialect.h  ToyOps.h  ToyOps.td
ex4-beautiful-dialect/lib/: CMakeLists.txt
ex4-beautiful-dialect/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex5-pass/: ex5.mlir
ex5-pass/include/toy/: CMakeLists.txt  ToyPasses.td
ex5-pass/lib/: CMakeLists.txt
ex5-pass/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
ex5-pass/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex6-pattern/: ex6.mlir
ex6-pattern/include/toy/: Toy.td  ToyOps.td  ToyPasses.h
ex6-pattern/lib/: toy.cpp
ex6-pattern/lib/Transforms/: CMakeLists.txt  ConvertToyToArith.cpp
ex6-pattern/tools/toy-opt/: CMakeLists.txt  toy-opt.cpp
ex7-convert/: ex7.mlir
ex7-convert/include/toy/: Toy.td  ToyDialect.td  ToyOps.h  ToyOps.td  ToyTypes.h  ToyTypes.td
ex7-convert/lib/: toy.cpp
ex7-convert/lib/Transforms/: ConvertToyToArith.cpp  DCE.cpp
ex7-convert/tools/toy-opt/: CMakeLists.txt
fig/: .gitignore  op.drawio
